--- a/products.html
+++ b/products.html
@@ -716,8 +716,8 @@ header {
     <div id="cartList"></div>
 
     <div class="modal-buttons">
-      <button id="sendBtn">📤 إرسال بالواتساب</button>
-      <button onclick="saveCart()">💾 حفظ السلة</button>
+      <button id="sendBtn">📤 ارسل فاتورتك واستلمها في 12 ساعه</button>
+      <button onclick="saveCart()">💾 احفظ الفاتوره</button>
       <button onclick="closeTotalModal()">❌ إغلاق</button>
     </div>
     
