--- a/products.html
+++ b/products.html
@@ -676,7 +676,7 @@ header {
 
   <div class="search-container">
     <input type="text" id="searchBox" placeholder="🔍ابدأ و ابحث عن منتج...">
-    <button id="offerBtn">💥 صل علي الحبيب كل لحظه فيه جديد </button>
+    <button id="offerBtn">💥هنبيع ببلاش واكن الصنف مجاش </button>
   </div>
 </header>
 
