--- a/index.html
+++ b/index.html
@@ -5,22 +5,87 @@
 <title>مملكة الأصليات - شركة جنة</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-body { font-family: Tahoma; margin:0; padding:0; background:#f9f9f9; text-align:center; }
-.top-bar { background:#ffd54f; color:#000; font-weight:bold; padding:8px; font-size:1em; }
-.blink { color:#8a2be2; font-size:1.3em; font-weight:bold; padding:10px; }
-header { background:#8a2be2; color:#fff; padding:25px 10px; }
-header h1 { margin:0; font-size:2.2em; font-weight:bold; }
-header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
-.top-images { display:flex; justify-content:center; gap:10px; margin:15px 0; }
-.top-images img { width:120px; height:auto; border-radius:10px; }
-.top-buttons { display:flex; flex-wrap:wrap; justify-content:center; margin:15px 0; gap:10px; }
-.top-buttons button { padding:12px 18px; font-size:1em; font-weight:bold; border:none; border-radius:8px; background:#8a2be2; color:#fff; cursor:pointer; transition:0.3s; }
-.top-buttons button:hover { background:#6a1fbf; transform:scale(1.05); }
+body { 
+  font-family: Tahoma, Arial, sans-serif; 
+  margin:0; 
+  padding:0; 
+  background:#f9f9f9; 
+  text-align:center; 
+  font-size: 14px;
+}
+.top-bar { 
+  background:#ffd54f; 
+  color:#000; 
+  font-weight:bold; 
+  padding:8px; 
+  font-size:0.9em; 
+}
+.blink { 
+  color:#8a2be2; 
+  font-size:1.1em; 
+  font-weight:bold; 
+  padding:8px; 
+  line-height: 1.4;
+}
+header { 
+  background:#8a2be2; 
+  color:#fff; 
+  padding:15px 10px; 
+}
+header h1 { 
+  margin:0; 
+  font-size:1.8em; 
+  font-weight:bold; 
+}
+header h2 { 
+  margin:5px 0 0; 
+  font-size:1em; 
+  font-weight:normal; 
+}
+.top-images { 
+  display:flex; 
+  justify-content:center; 
+  flex-wrap: wrap;
+  gap:8px; 
+  margin:12px 0; 
+}
+.top-images img { 
+  width:100px; 
+  height:auto; 
+  border-radius:8px; 
+  max-width: 30%;
+}
+.top-buttons { 
+  display:flex; 
+  flex-wrap:wrap; 
+  justify-content:center; 
+  margin:12px 0; 
+  gap:8px; 
+  padding: 0 5px;
+}
+.top-buttons button { 
+  padding:10px 14px; 
+  font-size:0.9em; 
+  font-weight:bold; 
+  border:none; 
+  border-radius:6px; 
+  background:#8a2be2; 
+  color:#fff; 
+  cursor:pointer; 
+  transition:0.3s; 
+  flex: 1;
+  min-width: 120px;
+  max-width: 160px;
+}
+.top-buttons button:hover { 
+  background:#6a1fbf; 
+  transform:scale(1.05); 
+}
 .telegram-fixed-btn {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    padding: 12px 18px;
+    padding: 10px 15px;
     border-radius: 50px;
     background: #00bfff;
     color: #fff;
@@ -29,22 +94,166 @@ header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
     box-shadow: 0 2px 5px rgba(0,0,0,0.3);
     z-index: 1002;
     transition: 0.3s;
+    font-size: 0.9em;
 }
-.telegram-fixed-btn:hover { background: #009acd; transform: scale(1.05); }
-.info-box { display:none; background:#fff; margin:15px auto; padding:20px; border-radius:12px; max-width:400px; text-align:center; box-shadow:0 2px 10px rgba(0,0,0,0.2); }
-.form-container { max-width:400px; margin:20px auto; background:#fff; padding:20px; border-radius:15px; box-shadow:0 2px 10px rgba(0,0,0,0.1); text-align:right; font-weight:bold; }
-.form-container h3 { text-align:center; color:#8a2be2; margin-bottom:15px; }
-.form-container input, .form-container select { width:100%; padding:12px; margin:10px 0; border-radius:8px; border:1px solid #ccc; font-size:1em; }
-.form-container button { width:100%; padding:12px; border:none; border-radius:10px; font-size:1.1em; font-weight:bold; cursor:pointer; color:#fff; background:#8a2be2; transition:0.3s; }
-.form-container button:hover { background:#6a1fbf; transform:scale(1.02); }
-.modal { display:none; position:fixed; z-index:1000; left:0; top:0; width:100%; height:100%; background:rgba(0,0,0,0.6); align-items:center; justify-content:center; }
-.modal-content { background:#fff; padding:20px; border-radius:12px; width:90%; max-width:400px; text-align:center; }
-.modal-content h2 { color:#8a2be2; margin-bottom:15px; }
-.password-box { display:none; position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); background:#00bfff; padding:25px; border-radius:50px; max-width:400px; width:90%; box-shadow:0 2px 15px rgba(0,0,0,0.3); text-align:center; z-index:1001; font-weight:bold; color:#fff; }
-.password-box input { width:70%; padding:10px; margin:10px 0; border-radius:8px; border:1px solid #ccc; }
-.password-box button { padding:10px 15px; margin:5px; border:none; border-radius:8px; background:#fff; color:#00bfff; cursor:pointer; font-weight:bold; }
-.support-btn { position:fixed; top:10px; left:10px; padding:10px 15px; border-radius:50%; background:#ff5722; color:#fff; font-weight:bold; cursor:pointer; box-shadow:0 2px 5px rgba(0,0,0,0.3); transition:0.3s; }
-.support-btn:hover { background:#e64a19; transform:scale(1.1); }
+.telegram-fixed-btn:hover { 
+  background: #009acd; 
+  transform: scale(1.05); 
+}
+.info-box { 
+  display:none; 
+  background:#fff; 
+  margin:12px auto; 
+  padding:15px; 
+  border-radius:10px; 
+  max-width:90%; 
+  text-align:center; 
+  box-shadow:0 2px 10px rgba(0,0,0,0.2); 
+}
+.form-container { 
+  max-width:90%; 
+  margin:15px auto; 
+  background:#fff; 
+  padding:15px; 
+  border-radius:12px; 
+  box-shadow:0 2px 10px rgba(0,0,0,0.1); 
+  text-align:right; 
+  font-weight:bold; 
+}
+.form-container h3 { 
+  text-align:center; 
+  color:#8a2be2; 
+  margin-bottom:12px; 
+  font-size: 1.1em;
+}
+.form-container input, .form-container select { 
+  width:100%; 
+  padding:10px; 
+  margin:8px 0; 
+  border-radius:6px; 
+  border:1px solid #ccc; 
+  font-size:0.9em; 
+  box-sizing: border-box;
+}
+.form-container button { 
+  width:100%; 
+  padding:10px; 
+  border:none; 
+  border-radius:8px; 
+  font-size:1em; 
+  font-weight:bold; 
+  cursor:pointer; 
+  color:#fff; 
+  background:#8a2be2; 
+  transition:0.3s; 
+  margin-top: 5px;
+}
+.form-container button:hover { 
+  background:#6a1fbf; 
+  transform:scale(1.02); 
+}
+.modal { 
+  display:none; 
+  position:fixed; 
+  z-index:1000; 
+  left:0; 
+  top:0; 
+  width:100%; 
+  height:100%; 
+  background:rgba(0,0,0,0.6); 
+  align-items:center; 
+  justify-content:center; 
+}
+.modal-content { 
+  background:#fff; 
+  padding:15px; 
+  border-radius:10px; 
+  width:90%; 
+  max-width:350px; 
+  text-align:center; 
+}
+.modal-content h2 { 
+  color:#8a2be2; 
+  margin-bottom:12px; 
+  font-size: 1.2em;
+}
+.password-box { 
+  display:none; 
+  position:fixed; 
+  top:50%; 
+  left:50%; 
+  transform:translate(-50%,-50%); 
+  background:#00bfff; 
+  padding:20px; 
+  border-radius:15px; 
+  max-width:90%; 
+  width:300px; 
+  box-shadow:0 2px 15px rgba(0,0,0,0.3); 
+  text-align:center; 
+  z-index:1001; 
+  font-weight:bold; 
+  color:#fff; 
+}
+.password-box input { 
+  width:80%; 
+  padding:10px; 
+  margin:8px 0; 
+  border-radius:6px; 
+  border:1px solid #ccc; 
+  box-sizing: border-box;
+}
+.password-box button { 
+  padding:8px 12px; 
+  margin:5px; 
+  border:none; 
+  border-radius:6px; 
+  background:#fff; 
+  color:#00bfff; 
+  cursor:pointer; 
+  font-weight:bold; 
+  font-size: 0.9em;
+}
+.support-btn { 
+  position:fixed; 
+  top:10px; 
+  left:10px; 
+  padding:8px 12px; 
+  border-radius:50%; 
+  background:#ff5722; 
+  color:#fff; 
+  font-weight:bold; 
+  cursor:pointer; 
+  box-shadow:0 2px 5px rgba(0,0,0,0.3); 
+  transition:0.3s; 
+  font-size: 0.8em;
+  z-index: 1000;
+}
+.support-btn:hover { 
+  background:#e64a19; 
+  transform:scale(1.1); 
+}
+
+/* تحسينات للشاشات الصغيرة جداً */
+@media (max-width: 350px) {
+  header h1 { 
+    font-size: 1.5em;
+  }
+  
+  .top-buttons button {
+    min-width: 100px;
+    font-size: 0.8em;
+    padding: 8px 10px;
+  }
+  
+  .top-images img {
+    width: 85px;
+  }
+  
+  .blink {
+    font-size: 1em;
+    padding: 5px;
+  }
+}
 </style>
 </head>
 <body>
@@ -68,7 +277,7 @@ header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
 <button onclick="showInfo('العنوان:<br>المنصورة - نبروه سوق المحمول')">🏠 العنوان</button>
 <button onclick="showInfo('تواصل معنا:<br>01067070423<br>01022495795<br>01012253500')">📞 تواصل معنا</button>
 <button onclick="window.open('https://www.facebook.com/share/174s1yLKfA/?mibextid=wwXIfr','_blank')">📘 فيسبوك</button>
-<button class="telegram-style-btn" onclick="showPasswordBox()">🔥 المنتجات والعروض</button>
+<button class="telegram-style-btn" onclick="goToProducts()">🔥 المنتجات والعروض</button>
 <button class="telegram-style-btn" onclick="showTelegramBox()">📲 تليجرام التفعيلات</button>
 </div>
 
@@ -98,14 +307,6 @@ header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
 </div>
 </div>
 
-<div id="passwordBox" class="password-box">
-<h2>ادخل كلمه السر لمشاهده الاسعار والمنتجات 🔑</h2>
-<input type="password" id="offerPass" placeholder="كلمة السر">
-<div style="margin:10px 0;">إذا أردت كلمة السر الخاصه بك، تواصل مع المندوب الخاص بك</div>
-<button onclick="checkPassword()">دخول</button>
-<button onclick="closePasswordBox()">رجوع</button>
-</div>
-
 <div id="telegramBox" class="password-box">
 <h2>ادخل تليجرام التفعيلات 🔑</h2>
 <input type="text" id="telegramPass" placeholder="فارغ حالياً">
@@ -120,44 +321,31 @@ header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
 // العناصر
 const infoBox = document.getElementById('infoBox');
 const infoText = document.getElementById('infoText');
-const passwordBox = document.getElementById('passwordBox');
 const submitBtn = document.getElementById("submitBtn");
 const successModal = document.getElementById("successModal");
 
-// كلمة السر الافتراضية للبرنامج
-const defaultPass = "055"; 
-let currentPass = defaultPass; // هنا غير الكلمة اللي عايزها وسيتم اقفال الصفحات القديمة
-
-// تحقق من كلمة السر عند تحميل الصفحة (اقفال للمستخدمين القدامى)
-window.addEventListener('load', function() {
-    const savedPass = localStorage.getItem("productsPass");
-    if(savedPass && savedPass !== currentPass){
-        alert("❌ تم تغيير كلمة السر، يرجى التواصل مع الدعم الفني: 01022495795");
-        localStorage.removeItem("productsPass");
-        window.location.href = "index.html";
-    } else {
-        localStorage.setItem("productsPass", currentPass);
-    }
-});
-
-// دوال الدخول للمنتجات
-function checkPassword() {
-    const pass = document.getElementById('offerPass').value;
-    if(pass === currentPass){
-        window.open('products.html', '_blank');
-    } else {
-        alert("❌ كلمة السر غير صحيحة");
-    }
+// الانتقال مباشرة إلى صفحة المنتجات بدون باسورد
+function goToProducts() {
+    window.open('products.html', '_blank');
 }
 
 // دوال المعلومات
-function showInfo(text){ infoText.innerHTML = text; infoBox.style.display = 'block'; }
-function closeInfo(){ infoBox.style.display = 'none'; }
-function showPasswordBox(){ passwordBox.style.display='block'; }
-function closePasswordBox(){ passwordBox.style.display='none'; }
-function showTelegramBox(){ document.getElementById('telegramBox').style.display='block'; }
-function closeTelegramBox(){ document.getElementById('telegramBox').style.display='none'; }
-function checkTelegram(){ alert("سيتم وضع الرابط لاحقاً"); }
+function showInfo(text){ 
+    infoText.innerHTML = text; 
+    infoBox.style.display = 'block'; 
+}
+function closeInfo(){ 
+    infoBox.style.display = 'none'; 
+}
+function showTelegramBox(){ 
+    document.getElementById('telegramBox').style.display='block'; 
+}
+function closeTelegramBox(){ 
+    document.getElementById('telegramBox').style.display='none'; 
+}
+function checkTelegram(){ 
+    alert("سيتم وضع الرابط لاحقاً"); 
+}
 
 // تسجيل بيانات المستخدم
 submitBtn.addEventListener("click", (e)=>{
@@ -166,12 +354,30 @@ submitBtn.addEventListener("click", (e)=>{
   const phoneVal = document.getElementById("phone").value.trim();
   const addressVal = document.getElementById("address").value.trim();
   const fieldVal = document.getElementById("field").value;
-  if(!nameVal){ alert("الرجاء إدخال الاسم أو اسم المحل"); return; }
-  if(!phoneVal){ alert("الرجاء إدخال رقم الموبايل بالانجليزي"); return; }
-  if(!addressVal){ alert("الرجاء إدخال العنوان"); return; }
-  if(!fieldVal){ alert("الرجاء اختيار المجال"); return; }
+  
+  if(!nameVal){ 
+      alert("الرجاء إدخال الاسم أو اسم المحل"); 
+      return; 
+  }
+  if(!phoneVal){ 
+      alert("الرجاء إدخال رقم الموبايل بالانجليزي"); 
+      return; 
+  }
+  if(!addressVal){ 
+      alert("الرجاء إدخال العنوان"); 
+      return; 
+  }
+  if(!fieldVal){ 
+      alert("الرجاء اختيار المجال"); 
+      return; 
+  }
+  
   const phonePattern = /^01[0-2,5][0-9]{8}$/;
-  if (!phonePattern.test(phoneVal)){ alert('من فضلك أدخل رقم موبايل مصري صحيح'); return; }
+  if (!phonePattern.test(phoneVal)){ 
+      alert('من فضلك أدخل رقم موبايل مصري صحيح'); 
+      return; 
+  }
+  
   successModal.style.display='flex';
   document.getElementById("name").value='';
   document.getElementById("phone").value='';
@@ -179,7 +385,22 @@ submitBtn.addEventListener("click", (e)=>{
   document.getElementById("field").value='';
 });
 
-function closeModal(){ successModal.style.display='none'; }
+function closeModal(){ 
+    successModal.style.display='none'; 
+}
+
+// إغلاق النوافذ بالنقر خارجها
+window.addEventListener('click', function(event) {
+    if (event.target == successModal) {
+        closeModal();
+    }
+    if (event.target == infoBox) {
+        closeInfo();
+    }
+    if (event.target == document.getElementById('telegramBox')) {
+        closeTelegramBox();
+    }
+});
 </script>
 </body>
 </html>
