--- a/products.html
+++ b/products.html
@@ -716,7 +716,7 @@ header {
     <div id="cartList"></div>
 
     <div class="modal-buttons">
-      <button id="sendBtn">📤 ارسل فاتورتك واستلمها في 12 ساعه</button>
+      <button id="sendBtn">📤 ارسل فاتورتك واستلمها في اقل من 12 ساعه</button>
       <button onclick="saveCart()">💾 احفظ الفاتوره</button>
       <button onclick="closeTotalModal()">❌ إغلاق</button>
     </div>
@@ -1024,4 +1024,5 @@ setInterval(() => {
 </script>
 </body>
 </html>
+
 
