--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@ header h2 {
 
 <!-- قسم شركاء النجاح -->
 <div id="partnersContainer" class="success-partners-container">
-  <h3>🤝 شركاء النجاح</h3>
+  <h3>😍 شركاءالنجاح</h3>
   <div class="partners-grid" id="partnersGrid">
     <!-- سيتم ملء هذا القسم بالبيانات من خلال الجافاسكريبت -->
   </div>
@@ -431,14 +431,14 @@ const partnersGrid = document.getElementById("partnersGrid");
 
 // بيانات شركاء النجاح (يمكن إضافة المزيد لاحقاً)
 const partnersData = [
-  { name: "محل جنة موبايل", address: "المنصورة - نبروه" },
-  { name: "مركز النور للأتصالات", address: "المنصورة - شارع الجلاء" },
-  { name: "موبايل تك", address: "نبروه - سوق المحمول" },
-  { name: "إلكترو ستور", address: "المنصورة - ميدان المسجد" },
-  { name: "تكنو لوجي", address: "نبروه - شارع السوق" },
-  { name: "موبايلات الأصليات", address: "المنصورة - شارع الثانوية" },
-  { name: "جوال للأتصالات", address: "نبروه - منطقة السوق" },
-  { name: "ديجيتال مارت", address: "المنصورة - شارع الجامعة" }
+  { name: "محل ", address: "العنوان" },
+  { name: "شركة", address: "العنوان" },
+  { name: "تك", address: "العنوان" },
+  { name: "شركة", address: "العنوان" },
+  { name: "شركة", address: "العنوان" },
+  { name: "شركة", address: "العنوان" },
+  { name: "شركة", address: "العنوان" },
+  { name: "شركة", address: "العنوان" }
 ];
 
 // تهيئة شركاء النجاح
