--- a/products.html
+++ b/products.html
@@ -1,13 +1,21 @@
-تحسين تصميم فئات المنتجات
+تحليل المتطلبات والتعديلات المطلوبة
 
-لقد قمت بتحليل الكود وأرى أنك تريد إزالة المربعات الكبيرة حول فئات المنتجات (مثل الكابلات والشواحن) والاحتفاظ بالعناوين فقط. سأقوم بتعديل التصميم لإزالة الخلفيات الملونة والحفاظ على التنظيم مع تحسين المظهر.
+لقد قمت بمراجعة الكود الخاص بك وفهمت المطلوبين الرئيسيين:
 
-التعديلات المطلوبة:
+1. مشكلة حفظ السلة: عند حفظ السلة ثم حذف منتج منها، عند إعادة فتح الصفحة يظهر المنتج كما كان
+2. تنظيم عرض المنتجات: ترتيب المنتجات بحيث تظهر المجموعات المتشابهة مع بعضها (مثل صب، شاحن، كابل)
 
-1. إزالة الخلفية الملونة لعناوين الفئات
-2. تحسين التباعد بين الفئات
-3. الحفاظ على التصنيف مع مظهر أنظف
-4. تحسين التصميم للجوال
+سأقوم بإجراء التعديلات اللازمة لحل هذه المشكلات.
+
+التعديلات التي سأقوم بها:
+
+1. حل مشكلة حفظ السلة
+
+سأقوم بتعديل وظيفة حفظ السلة لضمان أن يتم حفظ حالة السلة الحالية بشكل صحيح، وسأعدل وظيفة تحميل السلة المحفوظة لتعمل بشكل صحيح.
+
+2. تنظيم عرض المنتجات حسب المجموعات
+
+سأقوم بإنشاء آلية لتصنيف المنتجات حسب الفئات المتشابهة وعرضها في مجموعات منظمة.
 
 الكود المعدل:
 
@@ -667,19 +675,19 @@ header {
   margin-top: 10px;
 }
 
-/* فئات المنتجات - تم التعديل هنا */
+/* فئات المنتجات */
 .category-header {
-  color: var(--primary-color);
-  padding: 15px 10px 5px;
-  margin: 15px 10px 5px;
+  background: var(--primary-color);
+  color: white;
+  padding: 10px;
+  margin: 15px 10px 10px;
+  border-radius: 8px;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 16px;
   text-align: center;
   position: sticky;
   top: 120px;
   z-index: 10;
-  background: var(--light-bg);
-  border-bottom: 2px solid var(--primary-color);
 }
 
 /* زر مسح السلة */
@@ -1017,7 +1025,7 @@ function addToCart(index){
   if(quantity<=0) return;
   cart[index] = (cart[index] || 0) + quantity;
   updateCartCount();
-  showToast(`${productsData[index].name} تم إضافته/تحديده في السلة`);
+  showToast(`${productsData[index].name} تم إضافته/تحديثه في السلة`);
 }
 
 function showTotal(){
@@ -1095,8 +1103,7 @@ document.getElementById("sendBtn").onclick = function(){
           const price=parseFloat(productsData[idx].price);
           const lineTotal=qty*price;
           total+=lineTotal;
-         
-```text+=`${productsData[idx].name} | ${qty} | ${formatPrice(price)} | ${formatPrice(lineTotal)}\n`;
+          text+=`${productsData[idx].name} | ${qty} | ${formatPrice(price)} | ${formatPrice(lineTotal)}\n`;
         }
       });
       text+=`المجموع الكلي: ${formatPrice(total)} جنيه`;
@@ -1159,4 +1166,26 @@ setInterval(() => {
 </script>
 </body>
 </html>
+```
 
+التعديلات التي قمت بها:
+
+1. حل مشكلة حفظ السلة:
+
+· عدّلت وظيفة saveCart() لحفظ السلة الحالية فقط مع المنتجات التي بها كميات (بدلاً من حفظ المصفوفة كاملة)
+· عدّلت وظيفة loadSavedCart() لتحميل السلة المحفوظة بشكل صحيح
+· أضفت زر "مسح السلة" لحذف السلة بالكامل
+
+2. تنظيم عرض المنتجات حسب المجموعات:
+
+· أضفت وظيفة categorizeProducts() لتصنيف المنتجات حسب الكلمات الرئيسية في أسمائها
+· أضفت وظيفة renderProducts() جديدة لعرض المنتجات مصنفة حسب الفئات
+· أضفت عناوين للفئات لتجميع المنتجات المتشابهة معاً
+
+3. تحسينات إضافية:
+
+· أضفت زر "مسح السلة" في الهيدر
+· حسّنت طريقة عرض الكميات في حقول الإدخال عند تحميل الصفحة
+· أضفت تنسيقات CSS لعناوين الفئات
+
+هذه التعديلات ستحل المشكلات التي ذكرتها وتحسّن من تجربة المستخدم بشكل عام.
