--- a/products.html
+++ b/products.html
@@ -916,15 +916,15 @@
   
   // ترتيب الفئات حسب الأهمية
 ‏  const categoryOrder = [
-    "الصب", 
+    "الصبات", 
     "الشواحن", 
     "الكابلات", 
     "السماعات", 
-    "الحافظات والأغطية",
+    "الجرابات",
     "الحوامل",
     "الباور بانك",
     "عدسات الكاميرا",
-    "الفلاش ميموري",
+    "الفلاش وميموري",
     "منتجات أخرى"
   ];
   
@@ -1143,3 +1143,4 @@
 ‏</script>
 ‏</body>
 ‏</html>
+
