--- a/products.html
+++ b/products.html
@@ -965,7 +965,7 @@ function showTotal(){
         // عرض عادي للكمبيوتر
         const div=document.createElement("div");
         div.className="cart-item";
-        div.innerHTML=`<span>${productsData[idx].name</span>
+        div.innerHTML=`<span>${productsData[idx].name}</span>
                        <span>${qty}</span>
                        <span class="cart-item-hide-on-mobile">${formatPrice(price)}</span>
                        <span>${formatPrice(lineTotal)}</span>
