--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@ header h2 {
 
 <!-- قسم خدماتنا -->
 <div id="servicesContainer" class="services-container">
-  <h3>🛍️ خدماتنا المميزة</h3>
+  <h3>🛍️ارشادك</h3>
   <div class="services-grid">
     <div class="service-card" onclick="showServiceMessage('توفيقات الأسكرينات')">
       <div class="service-icon">📱</div>
@@ -849,3 +849,4 @@ window.addEventListener('DOMContentLoaded', (event) => {
 </script>
 </body>
 </html>
+
